# things.over.internet

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md
.docs/: toi.drawio
api/: .env.local  Cargo.toml
api/bins/http/: Cargo.toml
api/bins/http/src/: main.rs
api/bins/http/src/controllers/: mod.rs  things.rs  users.rs
api/bins/http/src/routes/: mod.rs  things.rs  users.rs
api/bins/webapi/: Cargo.toml
api/bins/webapi/src/: main.rs  openapi.rs
api/bins/webapi/src/controllers/: things.rs  users.rs
api/bins/webapi/src/routes/: things.rs  users.rs
api/bins/webapi/src/viewmodels/: mod.rs  things.rs
api/zhttp/: Cargo.toml
bridge/: Cargo.toml
bridge/bins/subscriber/: Cargo.toml
bridge/zsubscriber/: Cargo.toml
cdktf/: cdktf.json  go.mod  go.sum
iot_hook/: go.mod
iot_sitewise/: go.mod
notificator/: Cargo.toml
notificator/bins/consumers/: Cargo.toml
protofiles/: ex_models.proto  ex_services.proto
protosr/: build.rs
protosr/src/: toi.rs
thing_manager/: go.mod
things_manager/: go.mod  go.sum  main.go
things_manager/internal/consumers/: cmd.go  container.go
things_manager/internal/grpc/: cmd.go  container.go
things_manager/internal/grpc/services/: do.go
things_manager/pkg/: comander.go  container.go
users_manager/: .env.local  Cargo.toml
users_manager/bins/consumers/: Cargo.toml
users_manager/bins/consumers/src/: main.rs
users_manager/bins/consumers/src/consumers/: mod.rs  users.rs
users_manager/bins/grpc/: Cargo.toml
users_manager/bins/grpc/src/: main.rs
users_manager/bins/grpc/src/services/: mod.rs  users.rs
users_manager/protofiles/: users_service.proto
users_manager/protos/: Cargo.toml  build.rs
users_manager/protos/src/: users.rs
users_manager/zconsumer/: Cargo.toml
users_manager/zgrpc/: Cargo.toml
zprotosg/: ex_models.pb.go  ex_services.pb.go  ex_services_grpc.pb.go
zprotosr/: Cargo.toml  build.rs
