[package]
name = "grpc"
version = "0.1.0"
edition = "2021"

[dependencies]
protos = { path = "../../protos" }

env = { path = "../../../../../../Rafael/rust/ruskit/env" }
logging = { path = "../../../../../../Rafael/rust/ruskit/logging"  }
traces = { path = "../../../../../../Rafael/rust/ruskit/traces"  }

tonic = { version = "0.8.3" }
opentelemetry = { version = "0.18.0" }
async-trait = { version = "0.1.61" }
tracing = { version = "0.1.37" }
tokio = { version = "1.24.1", features = ["default", "rt-multi-thread", "macros", "signal"] }